# bistatic-doppler-localization

./: .gitignore  README.md  bistatic-doppler-localization.md  pyproject.toml
notebooks/: inference.ipynb
src/bdl/: constants.py  inference.py  loss.py
src/bdl/datasets/: __init__.py  doppler.py  doppler_timeseries.py  interface.py
